--- a/mozart_app/pubspec.yaml
+++ b/mozart_app/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  just_audio: ^0.9.30
+
+
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
